<resources>
    <string name="app_name">BmiCalculator</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="result">Result</string>
    <string name="result_TextView">Result will be shown</string>
    <string name="extremely_obese">Extremely Obese</string>
    <string name="obesity_level_2">Obesity Level 2</string>
    <string name="obesity_level_1">Obesity Level 1</string>
    <string name="overweight">Overweight</string>
    <string name="Normal">Normal</string>
    <string name="underweight">Underweight</string>
    <string name="save_result">Save BMI Result</string>
    <string name="bmi_result_save_positive">New BMI result has successfully saved</string>
    <string name="go_to_list">Go to result history</string>
    <string name="result_summary">Result Summary</string>
    <string name="result_tag">BMI Test Result</string>
    <string name="result_test_date">Test Date</string>
    <string name="delete_result">Delete Result</string>
    <string name="bmi_levle_history">BMI level</string>
    <string name="delete_result_sure">Do you want to delete this BMI result history?</string>
    <string name="delete_approved">Record has successfully deleted</string>
    <string name="delete_denied">Deletion has been canceled</string>
</resources>